lib/src/compiler/tests/testdata/errors/138.out
error[E014]: invalid regular expression
 --> line:3:3
  |
3 |   $a = /abcd((efg){0,10000}){0,10000}/
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ regexp is too large
  |